refactor: 예외 처리 구조 개선
## 📝 작업 내용
- 계좌, 자동이체, 사용자 관련 오류에 대한 새로운 예외 클래스 도입으로 예외 처리 개선
- 새로운 예외 클래스를 활용하여 기존 코드 리팩토링, 가독성과 유지보수성 향상
- API 일관성 개선을 위해 다양한 서비스와 컨트롤러 메서드의 응답 타입을 더 구체적으로 수정
- API 응답 표준화를 위한 이메일 및 추가 정보 응답용 새로운 DTO 추가
- 백엔드 모듈에 Hibernate를 위한 새로운 JPA 설정 구현

## 🔍 주요 변경사항
- 서비스와 컨트롤러 전반의 예외 처리 개선
- 일반적인 응답 타입 대신 구체적인 응답 타입을 반환하도록 메서드 시그니처 리팩토링
- JPA 새 설정으로 백엔드 모듈 구조 개선
- 프론트엔드 통합을 위한 새로운 HTML 파일 추가

## ✅ 체크리스트
- [x] 모든 테스트가 통과하나요?
- [x] 새로운 테스트를 추가했나요?
- [x] 기존 기능이 정상 동작하나요?
- [x] 코드 스타일을 맞췄나요?
- [x] 관련 문서를 업데이트했나요?

## 🤔 참고사항
- 백엔드 서비스 전반의 예외 처리와 코드 유지보수성 개선에 중점을 두었습니다.
- 관련 이슈: #8