@@ -1,9 +1,8 @@
 package com.hbbank.backend.service;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.fail;
+import static java.lang.Thread.sleep;
 import static org.awaitility.Awaitility.await;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -40,13 +39,12 @@ import com.hbbank.backend.domain.Account;
 import com.hbbank.backend.domain.Transaction;
 import com.hbbank.backend.domain.enums.TransferType;
 import com.hbbank.backend.dto.TransferRequestDTO;
-import com.hbbank.backend.repository.AccountRepository;
 import com.hbbank.backend.repository.TransactionRepository;
 
 import jakarta.persistence.EntityManager;
 import lombok.extern.slf4j.Slf4j;
 
-// 이체 관련 동시성 시나리오 통합 테스트
+// 이체 관련 시나리오 통합 테스트
 @Import({TestDataConfig.class, TestConfig.class})
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @SpringBootTest
@@ -58,61 +56,55 @@ class TransferIntegrationTest {
 
     @Autowired
     private TransferService transferService;
-
     @Autowired
-    private AccountRepository accountRepository;
-
+    private AccountService accountService;
     @Autowired
-    private TransactionRepository transactionRepository;
+    private TransactionService transactionService;
 
     @Autowired
     private PlatformTransactionManager transactionManager;
-
     @Autowired
     private EntityManager entityManager;
-
     @Autowired
     private TestDataConfig testDataConfig;
 
-    private void verifyTransferResult(
-            Account fromAccount, // 출금 계좌
-            Account toAccount, // 입금 계좌
-            BigDecimal transferAmount // 이체 금액
-    ) {
-        // 거래 내역 상세 검증
-        List<Transaction> withdrawals = transactionRepository
-                .findByAccountAndTransactionType(fromAccount, "출금")
-                .get()
-                .stream()
+    private void verifyTransferResult(Account fromAccount, Account toAccount, BigDecimal transferAmount) {
+        // 출금 거래내역
+        List<Transaction> withdrawals = transactionService
+                .findByAccountAndTransactionType(fromAccount, "출금").stream()
                 .sorted((a, b) -> b.getTransactionDateTime().compareTo(a.getTransactionDateTime()))
-                .collect(Collectors.toList());
-
+                .toList();
         Transaction withdrawal = withdrawals.stream()
                 .filter(t -> t.getWithdrawalAmount().stripTrailingZeros().equals(transferAmount.stripTrailingZeros()))
                 .findFirst()
                 .orElseThrow(() -> new AssertionError("출금 거래내역을 찾을 수 없습니다"));
 
-        // 출금 거래내역 검증
-        assertEquals("출금", withdrawal.getTransactionType());
-        assertEquals(fromAccount.getUser().getName(), withdrawal.getSender());
-        assertEquals(toAccount.getUser().getName(), withdrawal.getReceiver());
-        assertEquals(transferAmount.stripTrailingZeros(), withdrawal.getWithdrawalAmount().stripTrailingZeros());
-        assertEquals(BigDecimal.ZERO.stripTrailingZeros(), withdrawal.getDepositAmount().stripTrailingZeros());
-
-        // 입금 거래내역 검증
-        List<Transaction> deposits = transactionRepository
-                .findByAccountAndTransactionType(toAccount, "입금").get();
-
+        // 입금 거래내역
+        List<Transaction> deposits = transactionService
+                .findByAccountAndTransactionType(toAccount, "입금").stream()
+                .sorted((a, b) -> b.getTransactionDateTime().compareTo(a.getTransactionDateTime()))
+                .toList();
         Transaction deposit = deposits.stream()
                 .filter(t -> t.getDepositAmount().stripTrailingZeros().equals(transferAmount.stripTrailingZeros()))
                 .findFirst()
                 .orElseThrow(() -> new AssertionError("입금 거래내역을 찾을 수 없습니다"));
 
-        assertEquals("입금", deposit.getTransactionType());
-        assertEquals(fromAccount.getUser().getName(), deposit.getSender());
-        assertEquals(toAccount.getUser().getName(), deposit.getReceiver());
-        assertEquals(BigDecimal.ZERO.stripTrailingZeros(), deposit.getWithdrawalAmount().stripTrailingZeros());
-        assertEquals(transferAmount.stripTrailingZeros(), deposit.getDepositAmount().stripTrailingZeros());
+        // 검증
+        assertAll(
+                () -> assertEquals("출금", withdrawal.getTransactionType()),
+                () -> assertEquals(fromAccount.getUser().getName(), withdrawal.getSender()),
+                () -> assertEquals(toAccount.getUser().getName(), withdrawal.getReceiver()),
+                () -> assertEquals(transferAmount.stripTrailingZeros(), withdrawal.getWithdrawalAmount().stripTrailingZeros()),
+                () -> assertEquals(BigDecimal.ZERO.stripTrailingZeros(), withdrawal.getDepositAmount().stripTrailingZeros()),
+
+                () -> assertEquals("입금", deposit.getTransactionType()),
+                () -> assertEquals(fromAccount.getUser().getName(), deposit.getSender()),
+                () -> assertEquals(toAccount.getUser().getName(), deposit.getReceiver()),
+                () -> assertEquals(BigDecimal.ZERO.stripTrailingZeros(), deposit.getWithdrawalAmount().stripTrailingZeros()),
+                () -> assertEquals(transferAmount.stripTrailingZeros(), deposit.getDepositAmount().stripTrailingZeros())
+        );
+
+
     }
 
     @BeforeAll
@@ -128,13 +120,13 @@ class TransferIntegrationTest {
 
     @Test
     @Order(1)
-    @DisplayName("1. 기본 순차적인 이체 테스트")
+    @DisplayName("1. 순차 이체 테스트")
     void basicTransferTest() {
         // given
         String fromAccountNumber = String.format("%015d", 1);
         String toAccountNumber = String.format("%015d", 2);
-        Account fromAccount = accountRepository.findByAccountNumber(fromAccountNumber).get();
-        Account toAccount = accountRepository.findByAccountNumber(toAccountNumber).get();
+        Account fromAccount = accountService.findByAccountNumber(fromAccountNumber);
+        Account toAccount = accountService.findByAccountNumber(toAccountNumber);
         BigDecimal transferAmount = new BigDecimal("1000");
 
         BigDecimal fromInitialBalance = fromAccount.getBalance();
@@ -152,14 +144,18 @@ class TransferIntegrationTest {
         transferService.transfer(dto);
 
         // then
-        Account updatedFromAccount = accountRepository.findByIdWithUser(fromAccount.getId()).get();
-        Account updatedToAccount = accountRepository.findByIdWithUser(toAccount.getId()).get();
+        Account updatedFromAccount = accountService.findById(fromAccount.getId());
+        Account updatedToAccount = accountService.findById(toAccount.getId());
 
-        assertEquals(fromInitialBalance.subtract(transferAmount).stripTrailingZeros(),
-                updatedFromAccount.getBalance().stripTrailingZeros());
-        assertEquals(toInitialBalance.add(transferAmount).stripTrailingZeros(),
-                updatedToAccount.getBalance().stripTrailingZeros());
+        assertAll(
+                () -> assertEquals(fromInitialBalance.subtract(transferAmount).stripTrailingZeros(),
+                        updatedFromAccount.getBalance().stripTrailingZeros()),
+                () -> assertEquals(toInitialBalance.add(transferAmount).stripTrailingZeros(),
+                        updatedToAccount.getBalance().stripTrailingZeros())
+        );
+
         verifyTransferResult(updatedFromAccount, updatedToAccount, transferAmount);
+        
     }
 
     @Test
@@ -171,14 +167,15 @@ class TransferIntegrationTest {
         ExecutorService executorService = Executors.newFixedThreadPool(32);
         CountDownLatch latch = new CountDownLatch(threadCount);
 
-        Account targetAccount = accountRepository.findByAccountNumberWithUser(String.format("%015d", 1)).get();
+        Account targetAccount = accountService.findByAccountNumber(String.format("%015d", 1));
         BigDecimal initialBalance = targetAccount.getBalance();
         BigDecimal transferAmount = new BigDecimal("1000");
 
         List<Account> fromAccounts = Arrays.asList(
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 2)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 3)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 4)).get());
+                accountService.findByAccountNumber(String.format("%015d", 2)),
+                accountService.findByAccountNumber(String.format("%015d", 3)),
+                accountService.findByAccountNumber(String.format("%015d", 4))
+        );
 
         // when
         for (Account sourceAccount : fromAccounts) {
@@ -203,11 +200,11 @@ class TransferIntegrationTest {
         executorService.awaitTermination(10, TimeUnit.SECONDS);
 
         // Awaitility를 사용하여 트랜잭션 완료 대기
-       await()
+        await()
                 .atMost(5, TimeUnit.SECONDS)
                 .pollInterval(100, TimeUnit.MILLISECONDS)
                 .untilAsserted(() -> {
-                    Account account = accountRepository.findByIdWithUser(targetAccount.getId()).get();
+                    Account account = accountService.findById(targetAccount.getId());
                     assertNotNull(account);
                 });
 
@@ -215,20 +212,20 @@ class TransferIntegrationTest {
         // 출금계좌들의 잔액 검증(각각 9000원 돼야 함)
         for (Account a : fromAccounts) {
             BigDecimal expectedBalance = a.getBalance().subtract(transferAmount);
-            BigDecimal actualBalance = accountRepository.findByIdWithUser(a.getId()).get().getBalance();
+            BigDecimal actualBalance = accountService.findById(a.getId()).getBalance();
             assertEquals(expectedBalance, actualBalance);
         }
 
         // 입금계좌의 잔액 검증(10000원 + 3000원 = 13000원 돼야 함)
-        Account updatedTargetAccount = accountRepository.findByIdWithUser(targetAccount.getId()).get();
+        Account updatedTargetAccount = accountService.findById(targetAccount.getId());
         BigDecimal expectedBalance = initialBalance.add(transferAmount.multiply(new BigDecimal(threadCount)));
         BigDecimal actualBalance = updatedTargetAccount.getBalance();
         assertEquals(expectedBalance, actualBalance);
 
         List<Account> updatedAccounts = Arrays.asList(
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 2)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 3)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 4)).get());
+                accountService.findByAccountNumber(String.format("%015d", 2)),
+                accountService.findByAccountNumber(String.format("%015d", 3)),
+                accountService.findByAccountNumber(String.format("%015d", 4)));
 
         // 거래내역 생성 확인
         for (Account updatedFromAccount : updatedAccounts) {
@@ -241,120 +238,29 @@ class TransferIntegrationTest {
     @DisplayName("3. 데드락 시나리오 테스트 (A<->B)")
     void deadlockTest() throws InterruptedException {
         // given
-        ExecutorService executorService = Executors.newFixedThreadPool(2);
-        CountDownLatch startLatch = new CountDownLatch(1);
-        CountDownLatch completionLatch = new CountDownLatch(2);
-        AtomicBoolean deadlockDetected = new AtomicBoolean(false);
-        AtomicInteger successCount = new AtomicInteger(0);
-        List<Exception> exceptions = Collections.synchronizedList(new ArrayList<>());
-
-        TransactionTemplate transactionTemplate = new TransactionTemplate(transactionManager);
-        transactionTemplate.setIsolationLevel(TransactionDefinition.ISOLATION_SERIALIZABLE);
-        transactionTemplate.setTimeout(3);
-
-        Account accountA = accountRepository.findByAccountNumberWithUser(String.format("%015d", 1)).get();
-        Account accountB = accountRepository.findByAccountNumberWithUser(String.format("%015d", 2)).get();
-        BigDecimal transferAmount = new BigDecimal("1000");
-
-        Map<Long, BigDecimal> initialBalances = Map.of(
-                accountA.getId(), accountA.getBalance(),
-                accountB.getId(), accountB.getBalance());
+        Account fa = accountService.findById(1L);
+        Account ta = accountService.findById(2L);
+        BigDecimal amount = BigDecimal.valueOf(1000);
+        TransferRequestDTO dto1 = TransferRequestDTO.builder()
+                .type(TransferType.INSTANT)
+                .fromAccountId(fa.getId())
+                .toAccountNumber(ta.getAccountNumber())
+                .amount(amount)
+                .password("1234")
+                .build();
+        TransferRequestDTO dto2 = TransferRequestDTO.builder()
+                .type(TransferType.INSTANT)
+                .fromAccountId(ta.getId())
+                .toAccountNumber(fa.getAccountNumber())
+                .amount(amount)
+                .password("1234")
+                .build();
 
         // when
-        // A->B 이체
-        executorService.submit(() -> {
-            try {
-                startLatch.await();
-                boolean success = transactionTemplate.execute(status -> {
-                    try {
-                        TransferRequestDTO dto = TransferRequestDTO.builder()
-                                .type(TransferType.INSTANT)
-                                .fromAccountId(accountA.getId())
-                                .toAccountNumber(accountB.getAccountNumber())
-                                .amount(transferAmount)
-                                .password("1234")
-                                .build();
-                        return transferService.transfer(dto);
-                    } catch (Exception e) {
-                        status.setRollbackOnly();
-                        exceptions.add(e);
-                        throw e;
-                    }
-                });
-                if (success) {
-                    successCount.incrementAndGet();
-                }
-            } catch (Exception e) {
-                deadlockDetected.set(true);
-            } finally {
-                completionLatch.countDown();
-            }
-        });
-
-        // B->A 이체
-        executorService.submit(() -> {
-            try {
-                startLatch.await();
-                Thread.sleep(50); // B->A 이체를 조금 더 늦게 시작
-                boolean success = transactionTemplate.execute(status -> {
-                    try {
-                        TransferRequestDTO dto = TransferRequestDTO.builder()
-                                .fromAccountId(accountB.getId())
-                                .toAccountNumber(accountA.getAccountNumber())
-                                .amount(transferAmount)
-                                .password("1234")
-                                .build();
-                        return transferService.transfer(dto);
-                    } catch (Exception e) {
-                        status.setRollbackOnly();
-                        exceptions.add(e);
-                        throw e;
-                    }
-                });
-                if (success) {
-                    successCount.incrementAndGet();
-                }
-            } catch (Exception e) {
-                deadlockDetected.set(true);
-            } finally {
-                completionLatch.countDown();
-            }
-        });
-
-        startLatch.countDown();
+        transferService.transfer(dto1);
+        transferService.transfer(dto2);
 
         // then
-        boolean completed = completionLatch.await(10, TimeUnit.SECONDS); // 타임아웃 시간 증가
-        executorService.shutdownNow();
-
-        if (!exceptions.isEmpty()) {
-            exceptions.forEach(e -> log.error(e.getMessage(), e));
-        }
-
-        if (!completed || deadlockDetected.get()) {
-            fail("데드락이 감지되었거나 타임아웃이 발생했습니다.");
-        }
-
-        if (successCount.get() != 2) {
-            fail("두 이체 작업이 모두 성공하지 않았습니다. 성공 횟수: " + successCount.get());
-        }
-
-        // 트랜잭션이 완전히 커밋될 때까지 잠시 대기
-        Thread.sleep(2000); // 대기 시간 증가
-
-        // 잔액 검증 (원래 잔액과 동일해야 함)
-        entityManager.clear(); // 영속성 컨텍스트 초기화
-        Account updatedAccountA = accountRepository.findByIdWithUser(accountA.getId()).get();
-        Account updatedAccountB = accountRepository.findByIdWithUser(accountB.getId()).get();
-
-        assertEquals(initialBalances.get(accountA.getId()), updatedAccountA.getBalance(),
-                "A 계좌의 최종 잔액이 초기 잔액과 일치해야 함");
-        assertEquals(initialBalances.get(accountB.getId()), updatedAccountB.getBalance(),
-                "B 계좌의 최종 잔액이 초기 잔액과 일치해야 함");
-
-        // 거래내역 생성 확인
-        verifyTransferResult(updatedAccountA, updatedAccountB, transferAmount);
-        verifyTransferResult(updatedAccountB, updatedAccountA, transferAmount);
     }
 
     @Test
@@ -373,10 +279,10 @@ class TransferIntegrationTest {
         List<Exception> exceptions = Collections.synchronizedList(new ArrayList<>());
 
         List<Account> accounts = Arrays.asList(
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 1)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 2)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 3)).get(),
-                accountRepository.findByAccountNumberWithUser(String.format("%015d", 4)).get());
+                accountService.findByAccountNumber(String.format("%015d", 1)),
+                accountService.findByAccountNumber(String.format("%015d", 2)),
+                accountService.findByAccountNumber(String.format("%015d", 3)),
+                accountService.findByAccountNumber(String.format("%015d", 4)));
 
         BigDecimal transferAmount = new BigDecimal("1000");
         Map<Long, BigDecimal> initialBalances = accounts.stream()
@@ -401,14 +307,14 @@ class TransferIntegrationTest {
                     boolean success = false;
                     while (!success && retryCount < 3) {
                         try {
-                            success = transactionTemplate.execute(status -> {
+                            success = Boolean.TRUE.equals(transactionTemplate.execute(status -> {
                                 try {
                                     return transferService.transfer(dto);
                                 } catch (Exception e) {
                                     status.setRollbackOnly();
                                     throw e;
                                 }
-                            });
+                            }));
                             if (success) {
                                 successCount.incrementAndGet();
                             }
@@ -418,7 +324,7 @@ class TransferIntegrationTest {
                                 exceptions.add(e);
                                 deadlockDetected.set(true);
                             }
-                            Thread.sleep(100); // 재시도 전 잠시 대기
+                            sleep(100); // 재시도 전 잠시 대기
                         }
                     }
                 } catch (Exception e) {
@@ -449,12 +355,12 @@ class TransferIntegrationTest {
         }
 
         // 트랜잭션이 완전히 커밋될 때까지 충분히 대기
-        Thread.sleep(3000);
+        sleep(3000);
 
         // 잔액 검증
         entityManager.clear();
         for (Account account : accounts) {
-            Account updatedAccount = accountRepository.findByIdWithUser(account.getId()).get();
+            Account updatedAccount = accountService.findById(account.getId());
             assertEquals(initialBalances.get(account.getId()), updatedAccount.getBalance(),
                     String.format("%d번 계좌의 최종 잔액이 초기 잔액과 일치해야 함", account.getId()));
         }
